--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       DB_USER: postgres
       DB_PASSWORD: admin
       DB_NAME: followers-db
-      DB_HOST: db
-      DB_PORT: 5434
+      DB_HOST: follow_db
+      DB_PORT: 5432
 
   db:
     container_name: follow_db
