--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.show-sql=true
-#spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:5434/followers-db
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5434}/${DB_NAME:followers-db}
+#spring.datasource.url=jdbc:postgresql://db:5432/posts-db
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 server.port=8080
 server.error.include-message=always
+
