--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:followers-db}
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:followers-db}
+spring.datasource.url=jdbc:postgresql://localhost:5437/postgres
 spring.datasource.username=postgres
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=create
-server.port=8080
+spring.jpa.hibernate.ddl-auto=update
+server.port=8089
 server.error.include-message=always
