Added datadog code

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       DB_NAME: followers-db
       DB_HOST: follow_db
       DB_PORT: 5432
+      DD_API_KEY: ${DD_API_KEY}
 
   db:
     container_name: follow_db
@@ -24,6 +25,19 @@ services:
       POSTGRES_PASSWORD: admin
     volumes:
       - pgdata:/var/lib/postgresql/data
+
+  datadog:
+    image: datadog/agent
+    environment:
+      - DD_API_KEY=${DD_API_KEY}
+      - DD_SITE=datadoghq.com
+      - DD_LOGS_ENABLED=true
+      - DD_APM_ENABLED=true
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /proc/:/host/proc/:ro
+      - /sys/fs/cgroup:/host/sys/fs/cgroup:ro
+
 
 volumes:
   pgdata:
