--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.jpa.hibernate.ddl-auto=update
 server.port=8080
 server.error.include-message=always
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+
+datadog.apiKey:${DD_API_KEY}
+datadog.enabled: true
+datadog.step: PT10S
+management.metrics.web.server.auto-time-requests=true
