--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ dependencies {
 	implementation 'io.springfox:springfox-swagger2:3.0.0'
 	// https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
+	implementation 'org.springframework.metrics:spring-metrics:0.5.1.RELEASE'
+
 }
 
 //tasks.named('test') {
