--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,14 @@ server.port=8080
 server.error.include-message=always
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
+keycloak.auth-server-url=https://${KC_URL}
+keycloak.realm=Jibber-Jabber
+keycloak.resource=jibber-jabber-follow
+keycloak.public-client=true
+keycloak.credentials.secret = ${KEYCLOAK_FOLLOW_SECRET}
+keycloak.use-resource-role-mappings = false
+keycloak.bearer-only = true
+
 
 datadog.apiKey:${DD_API_KEY}
 datadog.enabled: true
