Added cors config for keycloak

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ keycloak.public-client=true
 keycloak.credentials.secret = ${KEYCLOAK_FOLLOW_SECRET}
 keycloak.use-resource-role-mappings = false
 keycloak.bearer-only = true
-
+keycloak.cors=true
 
 datadog.apiKey:${DD_API_KEY}
 datadog.enabled: true
