Changed keycloak variables values in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ server.error.include-message=always
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 keycloak.auth-server-url=https://${KC_URL}
-keycloak.realm=Jibber-Jabber
-keycloak.resource=jibber-jabber-follow
+keycloak.realm=JibberJabber
+keycloak.resource=JibberJabber-follows
 keycloak.public-client=true
 keycloak.credentials.secret = ${KEYCLOAK_FOLLOW_SECRET}
 keycloak.use-resource-role-mappings = false
