--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,8 @@ keycloak.public-client=true
 keycloak.credentials.secret = ${KEYCLOAK_FOLLOW_SECRET}
 keycloak.use-resource-role-mappings = false
 keycloak.bearer-only = true
-keycloak.cors=true
+#keycloak.cors=true
+keycloak.cors.allowed-headers=Authorization,Content-Type,X-Requested-With,Accept,Origin,X-Keycloak-Token
 
 datadog.apiKey:${DD_API_KEY}
 datadog.enabled: true
