Added /auth to keycloak url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.port=8080
 server.error.include-message=always
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-keycloak.auth-server-url=https://${KC_URL}
+keycloak.auth-server-url=${KC_URL}
 keycloak.realm=JibberJabber
 keycloak.resource=JibberJabber-follows
 keycloak.public-client=true
