--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -59,11 +59,11 @@ jobs:
       - name: Update server
           uses: appleboy/ssh-action@master
           with:
-            host: ${{ secrets.PROD_IP }}
+            host: ${{ secrets.DEV_IP }}
             username: ${{ secrets.USERNAME }}
-            key: ${{ secrets.PROD_KEY }}
+            key: ${{ secrets.DEV_KEY }}
             script: |
               cd Backend
-              sudo docker-compose stop ui-server
-              sudo docker-compose pull ui-server
-              sudo docker-compose up -d ui-server
+              sudo docker-compose stop follow-api
+              sudo docker-compose pull follow-api
+              sudo docker-compose up -d follow-api
